# scipy-toolbox

./: README.md  pyproject.toml
scipy_toolbox/: signal.py
scipy_toolbox/fitting/: gauss.py
src/: signal.py
src/fitting/: gauss.py
src/test/fitting/gauss/: test_fit.py
test/fitting/gauss/: test_fit.py  test_fit_peak.py  test_fit_sigma_from_fwhm.py
test/signal/: test_full_width_at.py
