[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scipy-toolbox"
version = "0.1.0"
description = ""
authors = [
	{name = "Dominik1123"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dependencies = [
	"numpy >= 1.21",
	"scipy >= 1.7",
	"uncertainties >= 3.1",
]

[project.optional-dependencies]
test = [
    "matplotlib >= 3.4",
]

[project.urls]
Source = "https://github.com/Dominik1123/scipy-toolbox"

[tool.flit.module]
name = "scipy_toolbox"
